# albor

./: .gitignore  .pmat-baseline.json  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  LINEAGE.md  MODEL_CARD.md  Makefile  README.md  clippy.toml  data_catalog.yaml  deny.toml  pmat.toml
.config/: nextest.toml
.github/: pull_request_template.md
benches/: sovereign_tools.rs
configs/: data-mix.yaml  success-criteria.yaml
contracts/: auto-eval-scheduling-v1.yaml  backward-parity-v1.yaml  batch-size-scaling-v1.yaml  bpe-tokenizer-kernel-v1.yaml  causal-attention-mask-v1.yaml  checkpoint-inference-bridge-v1.yaml  checkpoint-resume-v1.yaml  checkpoint-tokenizer-v1.yaml  cosine-lr-schedule-v1.yaml  cublas-gemm-v1.yaml  cuda-inference-v1.yaml  data-quality-filtering-v1.yaml  data-resume-position-v1.yaml  data-shard-kernel-v1.yaml  ddp-pretrain-kernel-v1.yaml  deterministic-training-kernel-v1.yaml  eval-humaneval-v1.yaml  eval-mbpp-v1.yaml  fresh-training-step-v1.yaml  fused-kernels-v1.yaml  gguf-openai-completions-v1.yaml  gpu-gradient-accumulation-v1.yaml  gpu-optimizer-checkpoint-v1.yaml  gpu-weight-pool-v1.yaml  gradient-accumulation-kernel-v1.yaml  gradient-clipping-v1.yaml  hyperparameter-tuning-v1.yaml  interleaved-optimizer-v1.yaml  knowledge-distillation-kernel-v1.yaml  lm-head-layout-parity-v1.yaml  memory-profiling-v1.yaml  model-merging-kernel-v1.yaml  moe-expert-dispatch-v1.yaml  moe-router-v1.yaml  multi-sample-passk-v1.yaml  pruning-kernel-v1.yaml  q4k-gpu-gemv-v1.yaml  q4k-inference-sync-budget-v1.yaml  residual-connection-v1.yaml  (+14 more)
src/: lib.rs
(+174 files in other folders)
