[package]
name = "albor"
version = "0.5.0"
edition = "2021"
publish = false
description = "Albor LLM — sovereign Python code completion model (spec, contracts, integration tests)"
license = "MIT"

[lib]
path = "src/lib.rs"

[features]
wasm = []  # WASM visualization via presentar (sovereign stack component)

[dependencies]
serde_yaml = "0.9"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sovereign_tools"
harness = false

[profile.release]
lto = true
